--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
 
-    <!-- added async to script -->
-    <script>
+    <!-- added print media query to css stylesheet -->
+    <link href="css/print.css" rel="stylesheet" media="print">
+
+    <!-- added async to scripts -->
+    <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
