--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
     <title>Cameron Pittman: Portfolio</title>
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <!-- removed call for 700 weight font since not used in stylesheets
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400"> -->
+
+    <!-- load fonts through webfontloader
+         code from https://github.com/typekit/webfontloader -->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js" async></script>
+    <script async>
+      WebFont.load({
+        google: {
+          families: ['Open Sans']
+        }
+      });
+    </script>
 
     <link href="css/style.css" rel="stylesheet">
 
     <!-- added print media query to css stylesheet -->
     <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/mobile.css" rel="stylesheet" media="(max-width: 480px)">
 
     <!-- added async to scripts -->
     <script async>
@@ -26,12 +39,62 @@
     </script>
     <script src="http://www.google-analytics.com/analytics.js" async></script>
     <script src="js/perfmatters.js" async></script>
+
+    <style>
+
+      html {
+        font-size: 100%;
+        overflow-y: scroll;
+        -webkit-tap-highlight-color: rgba(0,0,0,0);
+        -ms-text-size-adjust: 100%;
+        -webkit-text-size-adjust: none;
+      }
+
+      /* removed font-weight, not needed since default font weight is 400 px*/
+      body {
+        margin: 0;
+        font-size: 14px;
+        line-height: 1.61;
+        font-family: 'Open Sans',
+        sans-serif; color: #333;
+        background: #fff;
+      }
+
+      /* removed button, input, select, textarea and moved body styles into above*/
+      /* removed b, ol */
+
+      strong {
+        font-weight: bold;
+      }
+
+      ul {
+        margin: 1em 0;
+        padding: 0 0 0 20px;
+      }
+
+      img {
+        border: 0;
+        max-width: 100%;
+      }
+
+      /*moved body background style to body section above*/
+
+      header, footer, .container { max-width: 45em; margin: 0 auto; }
+
+      header { padding: 0 0.5em; color: #C90B0B; }
+
+      /* changed to classes*/
+      .header-img { border-radius: 40px; float: left; }
+      .header-p { font-size:1.5em; font-weight: bold; padding-left: 4em;}
+      .header-p-span { font-size: 0.8em; font-weight: normal;}
+
+    </style>
   </head>
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg"></a>
-      <p>Cameron Pittman<br><span>Course Developer</span></p>
+      <a href="/"><img class="header-image" src="img/profilepic.jpg"></a>
+      <p class="header-p">Cameron Pittman<br><span class="header-p-span">Course Developer</span></p>
     </header>
 
     <div class="container">
