--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       });
     </script>
 
-    <link href="css/style.css" rel="stylesheet">
+    <!--<link href="css/style.css" rel="stylesheet">*/-->
 
     <!-- added print media query to css stylesheet -->
     <link href="css/print.css" rel="stylesheet" media="print">
