--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <!--<link href="css/style.css" rel="stylesheet">*/-->
 
-    <!-- added print media query to css stylesheet -->
-    <link href="css/print.css" rel="stylesheet" media="print">
-    <link href="css/mobile.css" rel="stylesheet" media="(max-width: 480px)">
+    <!-- added print media query to css stylesheet and minified css files-->
+    <link href="release/css/print.min.css" rel="stylesheet" media="print">
+    <link href="release/css/mobile.min.css" rel="stylesheet" media="(max-width: 480px)">
 
     <!-- added async to scripts -->
     <script async>
@@ -38,7 +38,9 @@
       ga('send', 'pageview');
     </script>
     <script src="http://www.google-analytics.com/analytics.js" async></script>
-    <script src="js/perfmatters.js" async></script>
+
+    <!-- minified js file -->
+    <script src="release/js/perfmatters.min.js" async></script>
 
     <style>
 
@@ -93,7 +95,7 @@
 
   <body>
     <header>
-      <a href="/"><img class="header-image" src="img/profilepic.jpg"></a>
+      <a href="/"><img class="header-image" src="release/img/profilepic.jpg"></a>
       <p class="header-p">Cameron Pittman<br><span class="header-p-span">Course Developer</span></p>
     </header>
 
@@ -102,6 +104,7 @@
         <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
       </div>
 
+<!-- TODO: see if need to link img sources to compressed images -->
       <div class="content">
         <ul>
           <li>
@@ -123,13 +126,15 @@
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg">
+            <!-- removed inline style and linked to optimized image -->
+            <img src="views/release/images/pizzeria-small.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
         </ul>
     </div>
 
+<!-- TODO: different copy icon? -->
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
