Move mobile styles back into style.css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- added print media query to css stylesheet and minified css files-->
     <link href="release/css/print.min.css" rel="stylesheet" media="print">
-    <link href="release/css/mobile.min.css" rel="stylesheet" media="(max-width: 480px)">
+    <!--<link href="release/css/mobile.min.css" rel="stylesheet" media="(max-width: 480px)">-->
 
     <!-- added async to scripts -->
     <script async>
@@ -104,7 +104,6 @@
         <strong>I love web development!</strong> This is a template for a simple portfolio. I decided to use it to showcase a few Udacity courses I've taken and some teaching work, but you can use it to showcase any kind of project that you want the world to see :) <br> Contact me: me@email.com
       </div>
 
-<!-- TODO: see if need to link img sources to compressed images -->
       <div class="content">
         <ul>
           <li>
@@ -134,7 +133,6 @@
         </ul>
     </div>
 
-<!-- TODO: different copy icon? -->
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
