--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!-- load fonts through webfontloader
          code from https://github.com/typekit/webfontloader -->
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js" async></script>
-    <script async>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+    <script>
       WebFont.load({
         google: {
           families: ['Open Sans']
