--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- load fonts through webfontloader
          code from https://github.com/typekit/webfontloader -->
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
-    <script>
+    <script async>
       WebFont.load({
         google: {
           families: ['Open Sans']
