--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
     <!-- removed call for 700 weight font since not used in stylesheets
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400"> -->
 
-    <!-- load fonts through webfontloader
-         code from https://github.com/typekit/webfontloader -->
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
-    <script async>
-      WebFont.load({
+<!-- asynchronously load google fonts using Web Font Loader
+     code from https://github.com/typekit/webfontloader -->
+    <script>
+      WebFontConfig = {
         google: {
           families: ['Open Sans']
         }
-      });
+      };
+
+       (function(d) {
+          var wf = d.createElement('script'), s = d.scripts[0];
+          wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
+          s.parentNode.insertBefore(wf, s);
+       })(document);
     </script>
 
     <!--<link href="css/style.css" rel="stylesheet">*/-->
