FIX: Typo in class name for header image

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <body>
     <header>
-      <a href="/"><img class="header-image" src="release/img/profilepic.jpg"></a>
+      <a href="/"><img class="header-img" src="release/img/profilepic.jpg"></a>
       <p class="header-p">Cameron Pittman<br><span class="header-p-span">Course Developer</span></p>
     </header>
 
